# unides_spam_filter

./: README.md  README_LINUX.md  README_WINDOWS.md  app.py  pending_posts.json  pyproject.toml  requirements.txt  spam-filter.service  start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
data/lexicons/: adult.txt  argo.txt  politics.txt  spam.txt  yasakli_kelime.txt
models/: politics_model.json  spam_model.json
src/filter/: __init__.py  cli.py  config.py  lexicon.py  model.py  moderator.py  normalizer.py  rules.py
src/spam_filter.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_moderator.py
