[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-filter"
version = "0.1.0"
description = "Rule-assisted spam and policy moderation engine for forum content."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
]

[tool.setuptools]
packages = ["filter"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

